<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dictionaryapp.app_features.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.dictionaryapp.app_features.presentation.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >

        <action
            android:id="@+id/action_navigation_search_to_fragmentDetail"
            app:destination="@id/wordDetailFragment">
            <argument
                android:name="myArg"
                app:argType="com.example.dictionaryapp.app_features.domain.model.WordInfo" />
        </action>

    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.dictionaryapp.app_features.presentation.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/wordDetailFragment"
        android:name="com.example.dictionaryapp.app_features.presentation.search.WordDetailFragment"
        android:label="fragment_word_detail"
        tools:layout="@layout/fragment_word_detail" >

        <argument
            android:name="myArg"
            app:argType="com.example.dictionaryapp.app_features.domain.model.WordInfo" />
    </fragment>


</navigation>